--- a/ansiblebooks/install_tf.yml
+++ b/ansiblebooks/install_tf.yml
@@ -1,6 +1,6 @@
 ---
 - name: Install Terraform on RHEL-based system
-  hosts: Client
+  hosts: 10.0.0.5
   become: yes
   tasks:
     - name: Install yum-utils
