--- a/ansiblebooks/docker.yml
+++ b/ansiblebooks/docker.yml
@@ -1,6 +1,6 @@
 ---
 - name: Install Docker on Rocky
-  hosts: controller
+  hosts: adminuser
   become: true
   tasks:
     - name: Add Docker repository
